wrap fix

--- a/css/block/ucb-collections-block.css
+++ b/css/block/ucb-collections-block.css
@@ -122,7 +122,7 @@
 }
 
 .collections-filter-list {
-  min-width: max-content;
+  max-width: 100%;
 }
 
 .collection-grid-filters {
@@ -141,6 +141,7 @@
   border: 1px solid #181818;
   padding: 1px 6px;
   border-radius: 2px;
+  margin: 0 5px 5px 0;
 }
 
 .collection-reset {
@@ -175,4 +176,9 @@
 
     display: none;
   }
+}
+
+.collection-multiselect-single .collection-filter-links {
+  display: flex;
+  flex-flow: row wrap;
 }
